# evo2Mac

./: .gitignore  Dockerfile  NOTICE  README.md  README.upstream.md  install.sh  pyproject.toml  uninstall.sh  webapp.py  webui.sh
docs/: PAPER.md
evo2/: fp8_emulation.py  models.py  scoring.py  utils.py
evo2/configs/: evo2-1b-8k.yml  evo2-20b-1m.yml  evo2-40b-1m.yml  evo2-40b-8k.yml  evo2-7b-1m.yml  evo2-7b-262k.yml  evo2-7b-8k.yml
notebooks/exon_classifier/: exon_classifier.ipynb  samplePositions.tsv
notebooks/sparse_autoencoder/: sparse_autoencoder.ipynb
patches/: patch_vortex.py
scripts/: brca1_vep.py  compare_all.py  compare_to_upstream.py  diff_cpu_mps.py  setup.sh  smoke_test.py  test_dna.py  test_generation.py  validate_fp8_emulation.py  verify_all.py
scripts/gene_completion/: run_prokaryote.py
