[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evo2"
version = "0.5.2"
description = "Genome modeling across all domains of life"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Evo 2 Team"},
]
dependencies = [
    "biopython",
    "huggingface_hub",
    "torch",
    "vtx>=0.0.8",
]

[project.urls]
Homepage = "https://github.com/arcinstitute/evo2"
Repository = "https://github.com/arcinstitute/evo2"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
include = ["evo2*"]

[tool.setuptools.package-data]
"evo2" = ["configs/*.yml"]
"evo2.test" = ["data/*.csv"]
